--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -2,9 +2,7 @@ name: hello-world
 on: push
 jobs:
   my-job:
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
     steps:
-      - name: my-step
-        run: echo "Hello world!"
-      - name: Python
-        run: python3 --version
+      - name: macos
+        run: set
